Adds random quote of the day on homepage

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,6 @@
-
-<h2> <span class= "text"> Welcome to Zoomcar! </span></h1>
+<div class="zc_container">
+    <h3><b><span class= "text">Welcome to a mock booking and payments app</span></b></h3>
+    </br>
+    <h4 style="color:purple;">************** Quote of the day ****************</h4>
+    <h4 style="color:#3d3d5c; font-weight: normal;"><i><span class= "text"><%= @quote %></span></i></h4>
+<div class="zc_container">
